--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,3 +1,7 @@
 <footer>
-    <p>Partial > footer has been rendered.</p>
+    <p>Partial > footer has been rendered as.</p>
+    <a href="./">Home</a>
+    <a href="./about">About</a>
 </footer>
+
+    
