--- a/views/about.hbs
+++ b/views/about.hbs
@@ -10,9 +10,9 @@
     
     <h1>{{message}}</h1>
      
+    Mensagem gerada via hbs.registerHelper.{{horaAgora}}
 </body>
 
 {{> footer}} 
 
-{{horaAgora}}
 </html>
