--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,7 +1,7 @@
 <footer>
     <p>Partial > footer has been rendered as.</p>
-    <a href="./">Home</a>
-    <a href="./about">About</a>
+    <a href="./">Home</a><br />
+    <a href="./about">About</a><br />
+    <a href="./api">API</a><br />
+    <a href="./error">ERROR</a><br />
 </footer>
-
-    
