--- a/fundamentals/body/views/form.hbs
+++ b/fundamentals/body/views/form.hbs
@@ -9,6 +9,8 @@
 <body>
     <form action="/sendformGET" method="get">
         <input type="text" name="idade">
+        <input type='text' name='firstname'>
+        <input type='text' name='lastname'>
         <button type="submit">SEND</button>
     </form>
 
