--- a/View Engines/handlebars/views/form.hbs
+++ b/View Engines/handlebars/views/form.hbs
@@ -4,19 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>{{name}}</title>
 </head>
 <body>
-    <form action="/sendformGET" method="get">
-        <input type="text" name="idade">
-        <input type='text' name='firstname'>
-        <input type='text' name='lastname'>
-        <button type="submit">SEND</button>
-    </form>
-
-    <form action="/sendformPOST" method="post">
-        <input type="text" name="idade">
-        <button type="submit">SEND</button>
-    </form>
-
+    {{name}}
 </html>
